# hiring-agent-demo

./: .gitignore  README.md  TESTING.md  conftest.py  lumovra.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: model_config.yaml
eval/: metrics.py  run_eval.py
prompts/: hiring_agent.prompt.md
src/: audit.py  oversight.py
src/hiring_agent/: __init__.py  api.py  audit.py  config.py  llm.py  oversight.py
tests/: test_metrics.py  test_oversight.py
training/: pipeline.py
